# covent

./: CMakeLists.txt  LICENSE  Makefile  README.md  conandata.yml  conanfile.py  sonar-project.properties
.github/workflows/: build-and-test.yml
include/covent/: app.h  base.h  core.h  coroutine.h  covent.h  crl-cache.h  discovery.h  dns.h  exceptions.h  future.h  gather.h  generator.h  http.h  listener.h  loop.h  pkix.h  sentry.h  service.h  sleep.h  sockaddr-cast.h  temp.h
src/: application.cpp  covent.cpp  listener.cpp  sentry-wrap.cc  service.cpp  session.cpp
src/dns/: discovery.cpp  dns.cc
src/http/: client.cpp  fieldref.cpp  message.cpp  request.cpp  response.cpp  server.cpp  uri.cpp
src/tls/: crl-cache.cc  pkix.cc
test/: basic.cpp  coro.cpp  crls.cpp  dns-utils.cc  dnskeys  echo.cpp  http.cpp  main.cpp  resolver.cc  service.cpp  uri.cpp
test/src/: app.cpp  basic.cpp  coro.cpp  crls.cpp  dns-utils.cc  http-session.cpp  http.cpp  resolver.cc
